Fix border box and other alignment issues

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
-
 body {
     font-family: pacifico,'Times New Roman', Times, serif;
     margin: 0;
@@ -22,7 +17,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 15px;
+    gap: 10px;
 
 }
 
@@ -43,7 +38,7 @@ h1 {
 .button-container {
     
     background-color: #023047;
-    height: 500px;
+    height: 515px;
     width: 350px;
     color: white;
 }
